# stocks-tools

./: .gitignore  README.md  announce_stocks.py  pyproject.toml
examples/: announce_stocks.py  etf_maker.py
modules/stock-announcer/: pyproject.toml
modules/stock-etf-maker/: Makefile  README.md  etf-maker-model.ipynb  etf-maker-pygad.py  etf-maker.py  requirements.txt
modules/stock-news-analyzer/: main.py
modules/stock-news-grabber/: README.md
stock-announcer/: .env.example  Makefile  main.py
stock-etf-maker/: etf-maker-model.ipynb  etf-maker.py  main.py
stock-historicalyzer/: .env.example  main.py  requirements.txt  test-plot.py  test-report.md
stock-news-analyzer/: README.md  requirements.txt
stock-news-grabber/: .env.example  README.md  main.py  news.json  requirements.txt
stock_tools/: __init__.py
stock_tools/lib/announcer/: announce.py
stock_tools/lib/robinhood_client/: __init__.py  rh.py
stock_tools/scripts/: __init__.py  announce_stocks.py
stocks_tools/: __init__.py
stocks_tools/lib/: __init__.py
stocks_tools/lib/ai/: genetic_algorithm.py
stocks_tools/lib/announcer/: __init__.py  announce.py
stocks_tools/lib/etf_maker/: __init__.py  etf.py
stocks_tools/lib/robinhood_client/: rh.py
stocks_tools/utils/: __init__.py  config.py
tests/: test_config.py
