[tool.poetry]
name = "stocks_tools"
version = "0.1.0"
description = ""
authors = ["Aditya Karnam <akarnam37@gmail.com>"]
readme = "README.md"
packages = [{include = "stocks_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"
python-dotenv = "^1.0.1"
robin-stocks = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
